[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gurucloud-kb"
version = "0.1.7"
description = "Python SDK for the GuruCloud Knowledge Bank API"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "GuruCloud AI", email = "support@gurucloudai.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gurucloud_kb"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
